Change "Partners" API ID

--- a/extensions/documentation/public/index.html
+++ b/extensions/documentation/public/index.html
@@ -582,13 +582,13 @@
                   parameters: [],
                 },
               },
-              "/our-key-values": {
+              "/partners": {
                 get: {
                   deprecated: false,
-                  description: "Find all the our-key-values's records",
+                  description: "Find all the partners's records",
                   responses: {
                     200: {
-                      description: "Retrieve our-key-values document(s)",
+                      description: "Retrieve partners document(s)",
                       content: {
                         "application/json": {
                           schema: { properties: { foo: { type: "string" } } },
@@ -621,7 +621,7 @@
                     },
                   },
                   summary: "",
-                  tags: ["Our-key-values"],
+                  tags: ["partners"],
                   parameters: [
                     {
                       name: "_limit",
@@ -739,10 +739,10 @@
                 },
                 put: {
                   deprecated: false,
-                  description: "Update a single our-key-values record",
+                  description: "Update a single partners record",
                   responses: {
                     200: {
-                      description: "Retrieve our-key-values document(s)",
+                      description: "Retrieve partners document(s)",
                       content: {
                         "application/json": {
                           schema: { properties: { foo: { type: "string" } } },
@@ -775,14 +775,14 @@
                     },
                   },
                   summary: "",
-                  tags: ["Our-key-values"],
+                  tags: ["partners"],
                   requestBody: {
                     description: "",
                     required: true,
                     content: {
                       "application/json": {
                         schema: {
-                          $ref: "#/components/schemas/NewOur-key-values",
+                          $ref: "#/components/schemas/Newpartners",
                         },
                       },
                     },
@@ -791,11 +791,11 @@
                 },
                 delete: {
                   deprecated: false,
-                  description: "Delete a single our-key-values record",
+                  description: "Delete a single partners record",
                   responses: {
                     200: {
                       description:
-                        "deletes a single our-key-values based on the ID supplied",
+                        "deletes a single partners based on the ID supplied",
                       content: {
                         "application/json": {
                           schema: { type: "integer", format: "int64" },
@@ -828,7 +828,7 @@
                     },
                   },
                   summary: "",
-                  tags: ["Our-key-values"],
+                  tags: ["partners"],
                   parameters: [],
                 },
               },
@@ -3743,7 +3743,7 @@
                     updated_by: { type: "string" },
                   },
                 },
-                "Our-key-values": {
+                partners: {
                   required: ["id"],
                   properties: {
                     id: { type: "string" },
@@ -3851,7 +3851,7 @@
                     published_at: { type: "string", format: "date-time" },
                   },
                 },
-                "NewOur-key-values": {
+                Newpartners: {
                   properties: {
                     OurKeyValues: {
                       type: "array",
